--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,6 +17,7 @@ button {
     transition: background-color 0.3s; /* Smooth transition for button hover effect */
     font-weight: bold;
     margin: 10px;
+    border: 2px solid #D4F5F5;
 }
 
 button:hover {
