--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <div class="centered">
-        <button id="start">tart Game</button>
+        <button id="start">Start Game</button>
         <button id="addGame">Add Game</button>
     </div>
 
