--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,6 +20,11 @@ button {
     border: 2px solid #D4F5F5;
 }
 
+.login_button {
+    font-size: 10px;
+}
+
+
 button:hover {
     background-color: #93B7BE; /* Slightly darker green when hovered */
     border: 2px solid #D4F5F5;
@@ -30,6 +35,8 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+
 }
 
 
