--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -31,7 +31,7 @@
         });
 
         document.getElementById('multGame').addEventListener('click', function() {
-            window.location.href = '/multSongList';  // Change this URL to the desired page
+            window.location.href = '/multGame';  // Change this URL to the desired page
         });
     </script>
 </body>
