--- a/templates/multGame.ejs
+++ b/templates/multGame.ejs
@@ -4,31 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/game.css">
-    <title>game page</title>
-
-    <script>
-        const ws = new WebSocket("ws://localhost:8002")
-  
-            // 메세지 전송
-            // 메세지 전송
-            function sendMessage() {
-                const attempt = document.getElementById("inputField").value
-  
-                ws.send(attempt)
-            }
-  
-            // 메세지 수신
-            function receiveMessage(event) {
-                const chat = document.createElement("div")
-                const message = document.createTextNode(event.data)
-                chat.appendChild(message)
-    
-                const chatLog = document.getElementById("chat-log")
-                chatLog.appendChild(chat)
-            }
-  
-        ws.onmessage = receiveMessage
-    </script>
+    <title>Game Page</title>
 </head>
 <body>
     <div>
@@ -36,28 +12,26 @@
             <div id="player"></div>
             <div id="overlay"></div>
         </div>
-        <div class = "buttons">
+        <div class="buttons">
             <button id="playButton">Play</button>
             <button id="pauseButton">Pause</button>
             <button id="backToQuizButton">Back to Quiz</button>
         </div>
 
-        <!-- chat fe -->
         <div id="chat-log"></div>
         
         <div class="countdown" id="countdown">3</div>
 
         <div class="formContainer" id="formContainer">
-            <form id = "userForm" action="http://localhost:<%- portNumber %>/songList/game" method="post" >
+            <form id="userForm" action="http://localhost:<%= portNumber %>/songList/game" method="post">
                 <input type="text" id="inputField" name="userAttempt" placeholder="Enter text here">
-                <input type="submit" id="submitButton" value="Submit" onclick="sendMessage()">
-                <input type="text" id="objID" name="objID" value="<%- objID -%>">
+                <input type="submit" id="submitButton" value="Submit">
+                <input type="text" id="objID" name="objID" value="<%= objID %>">
             </form>
         </div>
-        <a href="http://localhost:<%- portNumber %>">Home</a>
+        <a href="http://localhost:<%= portNumber %>">Home</a>
     </div>
 
-    <!-- Modal HTML -->
     <div id="customAlert" class="modal">
         <div class="modal-content">
             <p id="failMessage">Incorrect solution. Please try again or go back to home.</p>
@@ -68,28 +42,25 @@
 
     <script src="https://www.youtube.com/iframe_api"></script>
     <script>
-        //const { exec } = require('child_process');
-
         let player;
-        const startTime = <%= startTime %>; // Start time in seconds
-        //const endTime = 100;   // End time in seconds
-        const quizStartTime = <%= quizStartTime %>;
-        const quizEndTime = <%= quizEndTime %>;
+        const startTime = "<%= startTime %>";
+        const quizStartTime = "<%= quizStartTime %>";
+        const quizEndTime = "<%= quizEndTime %>";
         let quizStarted = false;
         let quizSubmitted = false;
 
         function onYouTubeIframeAPIReady() {
+            console.log('YouTube IFrame API is ready');
             player = new YT.Player('player', {
                 height: '390',
                 width: '640',
-                videoId: '<%= id %>', // variable
+                videoId: '<%= id %>',
                 playerVars: {
                     'controls': 0,
                     'rel': 0,
                     'showinfo': 0,
                     'modestbranding': 1,
-                    'start': startTime, //variable
-                    //'end': endTime //variable
+                    'start': startTime
                 },
                 events: {
                     'onReady': onPlayerReady,
@@ -102,7 +73,7 @@
             const playButton = document.getElementById('playButton');
             const pauseButton = document.getElementById('pauseButton');
             const backToQuizButton = document.getElementById('backToQuizButton');
-            const tryAgainButton = document.getElementById('tryAgainButton')
+            const tryAgainButton = document.getElementById('tryAgainButton');
 
             playButton.addEventListener('click', () => {
                 player.seekTo(startTime);
@@ -115,16 +86,15 @@
 
             backToQuizButton.addEventListener('click', () => {
                 player.seekTo(quizStartTime);
-                player.playVideo(); // Hide the form
-                document.getElementById('pauseOverlay').style.display = 'none'; // Hide overlay
+                player.playVideo();
+                document.getElementById('pauseOverlay').style.display = 'none';
             });
 
             tryAgainButton.addEventListener('click', () => {
                 quizSubmitted = false;
                 player.seekTo(quizStartTime);
-                player.playVideo(); // Hide the form
-                document.getElementById('pauseOverlay').style.display = 'none'; // Hide overlay
-                
+                player.playVideo();
+                document.getElementById('pauseOverlay').style.display = 'none';
             });
 
             player.playVideo();
@@ -142,66 +112,55 @@
                     } else if (currentTime >= quizEndTime && !quizSubmitted) {
                         player.pauseVideo();
                         clearInterval(checkTime);
-                        document.getElementById('formContainer').style.display = 'flex'; // Show the form
-
+                        document.getElementById('formContainer').style.display = 'flex';
                     }
-                }, 1000); // Check every second
+                }, 1000);
             }
         }
 
         function startCountdown() {
             const countdownElement = document.getElementById('countdown');
-            countdownElement.style.display = 'flex'; // Show the countdown element
+            countdownElement.style.display = 'flex';
             let countdown = 3;
 
             const countdownInterval = setInterval(() => {
                 countdownElement.textContent = countdown;
                 if (countdown === 0) {
                     clearInterval(countdownInterval);
-                    countdownElement.style.display = 'none'; // Hide the countdown element
-                    document.getElementById('formContainer').style.display = 'flex'; // Show the form
+                    countdownElement.style.display = 'none';
+                    document.getElementById('formContainer').style.display = 'flex';
                     document.getElementById('backToQuizButton').style.display = 'flex';
-                    player.playVideo(); // Resume the video
+                    player.playVideo();
                 } else {
                     countdown--;
                 }
-            }, 1000); // Countdown every second
+            }, 1000);
         }
 
         const submitButton = document.getElementById('submitButton');
         submitButton.addEventListener('click', () => {
-            // const inputField = document.getElementById('inputField');
-            // alert(`Submitted text: ${inputField.value}`);
-            // document.getElementById('formContainer').style.display = 'none'; // Hide the form
-            // document.getElementById('backToQuizButton').style.display = 'none';
-
             quizSubmitted = true;
-            player.playVideo(); // Resume the video after form submission
+            player.playVideo();
         });
 
-        const solutionData = '<%= solution %>'
-        // Add event listener to the form
+        const solutionData = '<%= solution %>';
+
         document.getElementById('userForm').addEventListener('submit', function(event) {
             const userInput = document.getElementById('inputField').value;
-            
-            // Check if user input matches the solution
             if (userInput !== solutionData) {
-                event.preventDefault(); // Prevent form submission
+                event.preventDefault();
                 document.getElementById('customAlert').style.display = 'block';
             }
         });
 
-        // Handle Try Again button click
         document.getElementById('tryAgainButton').addEventListener('click', function() {
-            console.log("=======");
-            document.getElementById('customAlert').style.display = 'none'; // Hide modal
+            document.getElementById('customAlert').style.display = 'none';
         });
 
-        // Handle Go Back to Home button click
         document.getElementById('goHomeButton').addEventListener('click', function() {
-            console.log("=======");
-            window.location.href = '/'; // Redirect to home page
+            window.location.href = '/';
         });
     </script>
+    <script src="/js/game.js"></script>
 </body>
 </html>
