made multiplayer feature (starting game in sync, ending game, etc)

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -81,6 +81,9 @@ input[type="submit"] {
     display: none;
 }
 
+#gameDidNotStart {
+    display: block;
+}
 /* CSS for the modal */
 .modal {
     display: none; /* Hidden by default */
