finished multiplayer feature. going to start adding google login

--- a/templates/game.ejs
+++ b/templates/game.ejs
@@ -69,6 +69,7 @@
                     'onStateChange': onPlayerStateChange
                 }
             });
+            console.log("player ready with youtube id: " + <%= id %>);
         }
 
         function onPlayerReady(event) {
