just before trying to implement cookies to store sub's of google auth.

--- a/templates/multResult.ejs
+++ b/templates/multResult.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p><%- result -%></p>
+    <p>score changed by: <%- scoreChange -%></p>
     <button id = "nextGame">Continue to next game</button>
     <a href="/multGame">Continue to next game</a>
     <a href="http://localhost:<%- portNumber %>">Home</a>
