--- a/templates/game.ejs
+++ b/templates/game.ejs
@@ -61,7 +61,7 @@
                     'rel': 0,
                     'showinfo': 0,
                     'modestbranding': 1,
-                    'start': startTime, //variable
+                    'start': Math.floor(startTime), //variable
                     //'end': endTime //variable
                 },
                 events: {
@@ -69,7 +69,7 @@
                     'onStateChange': onPlayerStateChange
                 }
             });
-            console.log("player ready with youtube id: " + <%= id %>);
+            console.log("player ready with youtube id: " + "<%= id %>");
         }
 
         function onPlayerReady(event) {
@@ -90,38 +90,46 @@
             backToQuizButton.addEventListener('click', () => {
                 player.seekTo(quizStartTime);
                 player.playVideo(); // Hide the form
-                document.getElementById('pauseOverlay').style.display = 'none'; // Hide overlay
+                //document.getElementById('pauseOverlay').style.display = 'none'; // Hide overlay
             });
 
             tryAgainButton.addEventListener('click', () => {
                 quizSubmitted = false;
                 player.seekTo(quizStartTime);
                 player.playVideo(); // Hide the form
-                document.getElementById('pauseOverlay').style.display = 'none'; // Hide overlay
+                //document.getElementById('pauseOverlay').style.display = 'none'; // Hide overlay
                 
             });
 
             player.playVideo();
         }
 
-        function onPlayerStateChange(event) {
-            if (event.data == YT.PlayerState.PLAYING) {
-                const checkTime = setInterval(() => {
-                    const currentTime = player.getCurrentTime();
-                    if (currentTime >= quizStartTime && currentTime < quizEndTime && !quizStarted) {
-                        player.pauseVideo();
-                        clearInterval(checkTime);
-                        startCountdown();
-                        quizStarted = true;
-                    } else if (currentTime >= quizEndTime && !quizSubmitted) {
-                        player.pauseVideo();
-                        clearInterval(checkTime);
-                        document.getElementById('formContainer').style.display = 'flex'; // Show the form
+        let checkTime;
 
-                    }
-                }, 1000); // Check every second
+        function checkPlayerTime() {
+            const currentTime = player.getCurrentTime();
+            if (currentTime >= quizStartTime && currentTime < quizEndTime && !quizStarted) {
+                // Start countdown when quizStartTime begins
+                player.pauseVideo();
+                cancelAnimationFrame(checkTime);
+                startCountdown();
+                quizStarted = true;
+            } else if (currentTime >= quizEndTime && !quizSubmitted) {
+                player.pauseVideo();
+                cancelAnimationFrame(checkTime);
+                document.getElementById('formContainer').style.display = 'flex'; // Show the form
+            } else {
+                checkTime = requestAnimationFrame(checkPlayerTime);
             }
         }
+
+        function onPlayerStateChange(event) {
+            if (event.data == YT.PlayerState.PLAYING) {
+                checkTime = requestAnimationFrame(checkPlayerTime);
+            } else {
+                cancelAnimationFrame(checkTime); // Stop checking when the video is not playing
+            }
+        } 
 
         function startCountdown() {
             const countdownElement = document.getElementById('countdown');
@@ -135,6 +143,7 @@
                     countdownElement.style.display = 'none'; // Hide the countdown element
                     document.getElementById('formContainer').style.display = 'flex'; // Show the form
                     document.getElementById('backToQuizButton').style.display = 'flex';
+                    player.seekTo(quizStartTime);
                     player.playVideo(); // Resume the video
                 } else {
                     countdown--;
